--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="break-modal"></div>
+    <div class="break-container" id="break-modal"></div>
     <script src="./index.js"></script>
   </body>
 </html>
